# pymsm

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  noxfile.py  objects.inv  paper.bib  paper.md  poster.md  pyproject.toml  readthedocs-environment.yml  requirements.txt  setup.py  sitemap.xml  t.md
.github/workflows/: ci.yml  docs.yml  tests.yml  workflow.yml
_old_docs/source/: api.rst  conf.py
api/multistate_model/: index.html
api/multistate_simulator/: index.html
api/pathobject/: index.html
docs/: COVID_hospitalization_example.ipynb  Datasets.ipynb  Fitting_a_multistate_model.md  MultiStateModel.md  Preparing_a_dataset.md  Rotterdam_example.ipynb  Simulator.md  custom_fitters.md  docs-requirements.txt  index.md  methods.md
docs/api/: competing_risks_model.md  multistate_model.md  multistate_simulator.md  pathobject.md
docs/full_examples/: AIDSI_example.ipynb  COVID_hospitalization_example.ipynb  EBMT_example.ipynb  Rotterdam_example.ipynb
docs/source/: MultiStateModel.rst  api.rst  conf.py  index.rst  usage.rst
docs/usage/: Datasets.ipynb  Preparing_a_dataset.ipynb  competing_risks_stackplot.ipynb  custom_fitters.md  examining_a_model.ipynb  fitting_a_multistate_model.ipynb  path_sampling.ipynb
docs_old/: docs-requirements.txt
docs_old/source/: conf.py  index.rst  usage.rst
docs_old/source/notebooks/: ebmt.ipynb  first_example.ipynb
full_examples/AIDSI_example/: index.html
full_examples/COVID_hospitalization_example/: index.html
full_examples/EBMT_example/: index.html
full_examples/Rotterdam_example/: index.html
javascripts/: mathjax.js
methods/: index.html
pymsm/: competing_risks_model.py  event_specific_fitter.py  first_example.py  model.py  multi_state_competing_risks_model.py  plotting.py  statistics.py  test_competing_risks_model.py  utils.py
pymsm/datasets/: __init__.py  aidssi.csv  ebmt_wide.csv
pymsm/examples/: aidssi.ipynb  crm_example.ipynb  crm_example_utils.py  embt.ipynb  first_example.ipynb  first_example_utils.py  msebmt.csv  sandbox.ipynb  test_example.ipynb
search/: search_index.json
src/pymsm/: competing_risks_model.py  event_specific_fitter.py  multi_state_competing_risks_model.py  plotting.py  simulation.py  state_diagram.py  statistics.py  survival_tree_fitter.py  utils.py
src/pymsm/archive/: aidssi.ipynb  archived_tests.ipynb  coverage.yml  crm_example.ipynb  x.ipynb  (+3 more)
tests/: simulation_trials.ipynb  test_competing_risks_model.py  test_datasets.py  test_msm.py  test_msm_examples.py  test_rotterdam.py  test_sim.py  test_statistics.py  test_utils.py
usage/Datasets/: index.html
usage/Preparing_a_dataset/: index.html
usage/Simulator/: index.html
usage/competing_risks_stackplot/: index.html
usage/custom_fitters/: index.html
usage/examining_a_model/: index.html
usage/fitting_a_multistate_model/: index.html
usage/path_sampling/: index.html
(+14 files in other folders)
