[tool.poetry]
name = "pymsm"
version = "0.1.0"
description = "Multistate modelling on python"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hrossman/pymsm"
repository = "https://github.com/hrossman/pymsm"
keywords = ["Multistate models"]
authors = ["Hagai Rossman, Ayya Keshet <hagairossman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
lifelines = "^0.26.4"
tqdm = "^4.62.3"
ipykernel = "^6.9.1"
joblib = "^1.1.0"
scikit-learn = "^1.0.2"
scikit-survival = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.4"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pymsm"]

[tool.coverage.report]
show_missing = true
