[tool.poetry]
name = "pymsm"
version = "0.1.1"
description = "Multstate modeling"
authors = ["Hagai Rossman, Ayya Keshet"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pandas = "^1.4.1"
lifelines = "^0.26.4"
matplotlib = "^3.5.1"
joblib = "^1.1.0"
tqdm = "^4.62.3"
scikit-survival = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
